[gd_scene load_steps=4 format=3 uid="uid://xropqby4wyjs"]

[ext_resource type="Texture2D" uid="uid://d154jv2odo32u" path="res://textures2/menu_bg.png" id="1_yqeox"]
[ext_resource type="Script" uid="uid://dxg4ar7l843aa" path="res://scripts/play.gd" id="2_vjb58"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_con2f"]
size = Vector2(532.5, 259.5)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_yqeox")
expand_mode = 2

[node name="play" type="Area2D" parent="."]
script = ExtResource("2_vjb58")

[node name="CollisionShape2D" type="CollisionShape2D" parent="play"]
z_index = 1
position = Vector2(573.75, 296.25)
shape = SubResource("RectangleShape2D_con2f")

[connection signal="input_event" from="play" to="play" method="_on_input_event"]
[connection signal="mouse_entered" from="play" to="play" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="play" to="play" method="_on_mouse_exited"]
